Minor documentation updates to index.ipynb
A few grammatical, spelling, and style edits.

--- a/docs/source/index.ipynb
+++ b/docs/source/index.ipynb
@@ -61,19 +61,19 @@
     "# Why vaex\n",
     " \n",
     " * **Performance:** Works with huge tabular data, process $\\gt 10^9$ rows/second\n",
-    " * **Lazy / Virtual columns:** compute on the fly, without wasting ram\n",
+    " * **Lazy / Virtual columns:** compute on the fly, without wasting RAM\n",
     " * **Memory efficient** no memory copies when doing filtering/selections/subsets.\n",
     " * **Visualization:** directly supported, a one-liner is often enough.\n",
-    " * **User friendly API:** You will only need to deal with the DataFrame object, and tab completion + docstring will help you out: `ds.mean<tab>`, feels very similar to Pandas.\n",
-    " * **Lean:** separated into multiple packages\n",
+    " * **User-friendly API:** You will only need to deal with the DataFrame object, and tab completion + docstring will help you out: `ds.mean<tab>`, feels very similar to Pandas.\n",
+    " * **Lean:** functional areas are split into separate packages\n",
     "    * `vaex-core`: DataFrame and core algorithms, takes numpy arrays as input columns.\n",
     "    * `vaex-hdf5`: Provides memory mapped numpy arrays to a DataFrame.\n",
-    "    * `vaex-arrow`: [Arrow](https://arrow.apache.org/) support for cross language data sharing.\n",
+    "    * `vaex-arrow`: [Arrow](https://arrow.apache.org/) support for cross-language data sharing.\n",
     "    * `vaex-viz`: Visualization based on matplotlib.\n",
     "    * `vaex-jupyter`: Interactive visualization based on Jupyter widgets / ipywidgets, bqplot, ipyvolume and ipyleaflet.\n",
-    "    * `vaex-astro`: Astronomy related transformations and FITS file support.\n",
+    "    * `vaex-astro`: Astronomy-related transformations and FITS file support.\n",
     "    * `vaex-server`: Provides a server to access a DataFrame remotely.\n",
-    "    * `vaex-distributed`: (Proof of concept) combined multiple servers / cluster into a single DataFrame for distributed computations.\n",
+    "    * `vaex-distributed`: (Proof of concept) Combines multiple servers / cluster into a single DataFrame for distributed computations.\n",
     "    * `vaex-qt`: Program written using Qt GUI.\n",
     "    * `vaex`: meta package that installs all of the above.\n",
     "    * `vaex-ml`: [Machine learning](ml.ipynb)\n",
@@ -104,7 +104,7 @@
    "source": [
     "# Getting started\n",
     "\n",
-    "We assuming you have installed vaex, and are running a [Jupyter notebook server](https://jupyter.readthedocs.io/en/latest/running.html). We start by importing vaex and ask it to give us sample example dataset."
+    "We are assuming you have installed vaex, and are running a [Jupyter notebook server](https://jupyter.readthedocs.io/en/latest/running.html). We start by importing vaex and ask it to give us sample example dataset."
    ]
   },
   {
@@ -218,15 +218,15 @@
     }
    ],
    "source": [
-    "df_negative = df[df.x < 0]  # easily filter your DataFrame, without making a copy\n",
-    "df_negative[:5][['x', 'y']]  # take the first five rows, and only the 'x' and 'y' column (no memory copy!)"
+    "df_negative = df[df.x < 0]  # easily filter your DataFrame __without duplicating data__\n",
+    "df_negative[:5][['x', 'y']]  # take the first five rows, and only the 'x' and 'y' column (no memory used copying data!)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When dealing with huge datasets, say a billion rows ($10^9$), computations with the data can waste memory, up to 8 GB for a new column. Instead, vaex uses lazy computation, only a representation of the computation is stored, and computations done on the fly when needed. Even though, you can just many of the numpy functions, as if it was a normal array."
+    "When dealing with huge datasets, say a billion ($10^9$) rows, computations with the data can waste memory &ndash; up to $8$ GB for a new column. Instead, vaex uses lazy computation; only a representation of the computation is stored, and computations are done on the fly when needed. Even so, you can use many of the numpy functions as if it was a normal array."
    ]
   },
   {
@@ -247,16 +247,16 @@
    ],
    "source": [
     "import numpy as np\n",
-    "# creates an expression (nothing is computed)\n",
+    "# creates an expression (nothing is computed/evaluated)\n",
     "some_expression = df.x + df.z\n",
-    "some_expression  # for convinience, we print out some values"
+    "some_expression  # for convenience, we print out some values"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These expressions can be added to a DataFrame, creating what we call a *virtual column*. These virtual columns are simular to normal columns, except they do not waste memory."
+    "These expressions can be added to a DataFrame, creating what we call a *virtual column*. These virtual columns are similar to normal columns, except they do not waste memory."
    ]
   },
   {
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of the core features of vaex is its ability to calculate statistics on a regular (N-dimensional) grid. The dimensions of the grid are specified by the binby argument (analogous to SQL's grouby), and the shape and limits."
+    "One of the core features of vaex is its ability to calculate statistics on a regular (N-dimensional) grid. The dimensions of the grid are specified by the arguments: `binby` (analogous to SQL's `grouby`), `shape`, and `limits`."
    ]
   },
   {
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These one and two dimensional grids can be visualized using any plotting library, such as matplotlib, but the setup can be tedious. For convenience we can use [plot1d](api.rst#vaex.dataframe.DataFrame.plot1d), [plot](api.rst#vaex.dataframe.DataFrame.plot), or see the [list of plotting commands](api.rst#visualization)"
+    "These one and two dimensional grids can be visualized using any plotting library, such as matplotlib, but the setup can be tedious. For convenience, we can use [plot1d](api.rst#vaex.dataframe.DataFrame.plot1d), [plot](api.rst#vaex.dataframe.DataFrame.plot), or see the [list of plotting commands](api.rst#visualization)"
    ]
   },
   {
@@ -364,7 +364,7 @@
     }
    ],
    "source": [
-    "df.plot(df.x, df.y, show=True);  # make a plot quickly"
+    "df.plot(df.x, df.y, show=True);  # make a quick plot"
    ]
   },
   {
